<resources>
    <string name="app_name">Vehilytics</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login">LOGIN</string>
    <string name="content_description_app_logo">Application Logo</string>
    <string name="register">REGISTER</string>
    <string name="register_now">Not a user? Sign up now.</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="login_prompt">Already register? Login.</string>
    <string name="email_or_password_invalid">Email or Password invalid.</string>
    <string name="blank_fields_error">None of the fields can be blank</string>
    <string name="password_mismatch_error">Password and Confirm Password must match</string>
    <string name="email_in_use_error">Email is already registered</string>
    <string name="sign_out">Sign Out</string>
    <string name="vehicle">Vehicle</string>
    <string name="preferences">Preferences</string>
    <string name="reminders">Reminders</string>
    <string name="device">Device</string>
    <string name="vehicle_button_subtext">View the status of your vehicle</string>
    <string name="preferences_button_subtext">Manage the sensors reported</string>
    <string name="reminders_button_subtext">Manage your reminders</string>
    <string name="device_button_subtext">Manage your device</string>
    <string name="currently_attached_device">Your Device:</string>
    <string name="none">None</string>
    <string name="attach_device">Attach Device</string>
    <string name="detach_device">Detach Device</string>
    <string name="device_name">Device Name</string>
    <string name="invalid_device_name">Invalid device name</string>
    <string name="no_device_attached">No Device attached</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="error_occurred">An error occurred</string>
    <string name="device_already_attached">Device already attached</string>
    <string name="ellipses">…</string>
    <string name="app_logo">App Logo</string>
    <string name="vehicle_sensor_status_indicator">Vehicle sensor status indicator</string>
    <string name="set_reminder">Set reminder:</string>
    <string name="refresh_graph">Refresh Graph</string>
</resources>
