<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ddowney.vehilytics.activities.LoginActivity"
    android:background="@drawable/colored_repeating_back">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@mipmap/ic_launcher_foreground"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/content_description_app_logo" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignBottom="@id/app_logo"
        android:layout_alignEnd="@id/email_wrapper"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:gravity="center_vertical|start"
        android:text="@string/app_name"
        android:textColor="@color/colorIcons"
        android:textSize="32sp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="6dp"/>

    <TextView
        android:id="@+id/error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/email_wrapper"
        android:layout_marginBottom="-16dp"
        android:layout_centerHorizontal="true"
        android:text="@string/email_or_password_invalid"
        style="@style/ErrorMessage"/>
    
    <FrameLayout
        android:id="@+id/email_wrapper"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/app_logo"
        style="@style/FormTextFieldWrapper">

        <!--TODO: Remove hardcoded email-->
        <EditText
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:text="dan@example.com"
            android:inputType="textEmailAddress"
            style="@style/FormTextField"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/password_wrapper"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/email_wrapper"
        style="@style/FormTextFieldWrapper">

        <!--TODO: Remove hardcoded password-->
        <EditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:text="password"
            android:inputType="textPassword"
            style="@style/FormTextField"/>

    </FrameLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/login"
        android:layout_below="@id/password_wrapper"
        android:layout_marginTop="16dp"
        style="@style/LoginButton"/>

    <TextView
        android:id="@+id/register_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_now"
        android:textSize="16sp"
        android:textColor="@color/colorIcons"
        android:layout_below="@id/login_button"
        android:layout_marginTop="32dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>

</RelativeLayout>
