<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DeviceActivity"
    android:background="@drawable/repeating_back">

    <android.support.v7.widget.Toolbar
        android:id="@+id/device_manager_toolbar"
        app:titleTextColor="@color/colorIcons"
        app:popupTheme="@style/PopupMenuStyle"
        app:title="Device Manager"
        style="@style/MainToolbar"/>

    <LinearLayout
        android:id="@+id/device_name_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/device_manager_toolbar"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp">

        <TextView
            android:id="@+id/device_name_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/currently_attached_device"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryText"
            android:layout_weight="0.7" />

        <TextView
            android:id="@+id/device_name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/none"
            android:textSize="16sp"
            android:textColor="@color/colorSecondaryText"
            android:layout_weight="0.3"/>

    </LinearLayout>

    <View android:id="@+id/divider1" android:layout_below="@id/device_name_wrapper" style="@style/Divider"/>

    <EditText
        android:id="@+id/device_name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:inputType="text"
        android:hint="@string/device_name"
        android:layout_below="@id/divider1"/>

    <Button
        android:id="@+id/attach_device_button"
        android:text="@string/attach_device"
        android:layout_below="@id/device_name_field"
        android:layout_alignParentEnd="true"
        android:clickable="false"
        style="@style/DeviceManagerButton" />

    <Button
        android:id="@+id/detach_device_button"
        android:text="@string/detach_device"
        android:layout_below="@id/attach_device_button"
        android:layout_alignParentEnd="true"
        android:clickable="false"
        style="@style/DeviceManagerButton" />

    <TextView
        android:id="@+id/device_manager_error_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/invalid_device_name"
        android:layout_below="@id/detach_device_button"
        style="@style/ErrorMessage"/>

</RelativeLayout>